--- a/styles.css
+++ b/styles.css
@@ -1,291 +1,431 @@
+#navbar {
+  margin-top: -10px;
+  background-color: #fff;
+}
+/* body,
+input,
+select {
+  color: #000;
+  font-family: Suisse Intl, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 1.4;
+} */
 
-        #navbar{
-            margin-top: -10px;
-        }
-        #navbar>div:nth-child(1){
-            display: flex;
-            width:25%;
-            height:20%;
-            padding-left: 75%;
-            align-items: center;
-        }
-        #navbar>div:nth-child(1)>p{
-            margin: 15px;
-            cursor: pointer ;
-        }
-        #navbar>div:nth-child(2){
-            display: flex;
-            width:100%;
-            height:30%;
-            border:1px solid balck;
-            justify-content: space-between;
-        }
-        #navbar>div:nth-child(2)>img{
-            width:150px;
-        }
-        #navbar>div:nth-child(2)>input{
-            width:70%;
-            height:40px;
-            align-self: center;
-            border: 2px solid black;
-        }
-        #banner{
-            width:100%;
-            height:510px;
-            border:1px solid black;
-            margin-top: 20px;
-            margin-left: -8px;
-        }
-        #banner>img{
-            width:102%;
-        }
-        #grid1{
-            display:grid;
-            grid-template-columns: repeat(4,400px);
-            grid-template-rows: repeat(3,300px);
-            margin-top: 80px;
-        }
-        #grid1>div{
-            border:2px solid black;
-            width:100%;
-            display: flex;
-            
-        }
-        #grid1>div>div{
-            border:1px solid red;
-            width:100px;
-            height:295px;
-        }
-        .vertical{ 
-            color: #000;
-            font-size: 25px;
-            margin-left: 0;
-            text-transform: uppercase;
-            transform: translateY(285px) rotate(-90deg);
-            transform-origin: 0 0;
-            white-space: nowrap;
-            width: 290px;
-            height:100px;
-            border:1px solid green;
-            padding-left: 24px;
-        }
+._3gtxU {
+  -webkit-appearance: none !important;
+  background: #fff;
+  border: 0;
+  border-radius: 1px 0 0 1px;
+  caret-color: #000;
+  flex: 1 0 0;
+  font-size: 16px;
+  height: 40px;
+  outline: 0;
+  padding: 0 16px 0 10px;
+  width: 100%;
+}
 
-        #grid1>div>img{
-            width:300px;
-            height:300px;
-            justify-content: flex-end;
-        }
-       
-        #grid2{
-            display: grid;
-            grid-template-columns: repeat(3,450px);
-            grid-template-rows: repeat(8,365px);
-            margin-top: 80px;
-        }
-        #grid2>div{
-            border:1px solid black;
-            display: flex;
-            text-transform: uppercase;
-            background-color:  #f5f4f2;
-            text-align: center;
-            font-size: larger;
-        }
-        #grid2>div>img{
-            width:340px;
-            height:300px;
-            padding-top: 65px;
-            padding-left: 20px;
-        }
-        .big{
-            font-size: 70px;
-            background-color:  #f5f4f2;
-        }
-        #help{
-            font-size: large;
-            padding: 0px;
-            width:70px;
-            height:30px;
-        }
-        #join{
-            background-color: black;
-            color: white;
-            padding: 5px;
-        }
-        #grid3{
-            display: grid;
-            grid-template-columns: repeat(4,1fr);
-            height:860px;
-            border:1px solid black;
-            margin-top: 80px;
-        }
-        #grid3>div{
-            height: 98%;
-            margin:auto;
-            text-align: center;
-            font-size: larger;
-            padding: 10px;
-            background-color:antiquewhite;
-        }
-        #grid3>div>h2{
-            font-size: 130px;
-            text-align: center;
-        }
-        #grid3>:nth-child(4)>h2{
-            font-size: 80px;
-        }
-        #grid3>:nth-child(4):hover{
-            border:2px solid black;
-            background-color: #c9bffb;
-        }
-        #grid3>:nth-child(4)>button{
-            padding: 20px;
-            color:wheat;
-            background-color: black;
-        }
-        #grid3>:nth-child(4){
-            background-color:#cafc4f;
-        }
-        #grid3>div>h4{
-            font-size: larger;
-        }
-        #grid4{
-            background-color: azure;
-            margin-top: 80px;
-            height: 350px;
-            display:grid;
-            width:100%;
-            border:1px solid black;
-        }
-        #grid4>div{
-            display: flex;
-            height:150px;
-            font-size: 25px;
-            width:80%;
-            margin-left: 100px;
-            justify-content: space-around;
-            margin-top: -120px;
-        }
-        #grid4>h4{
-            font-size: large;
-            align-items: center;
-            color: #000;
-            display: flex;
-            font-size: 32px;
-            letter-spacing: .01em;
-            line-height: 58px;
-            margin-left: 0;
-            text-align: center;
-            text-transform: uppercase;
-            transform: translateY(285px) rotate(-90deg);
-            transform-origin: 0 0;
-            white-space: nowrap;
-            width: 60px;
-        }
-        #grid4>div>div{
-            width:250px;
-            height:100px;
-            margin: 20px;
-            margin-top: 30px;
-        }
-        #grid5{
-            border:1px solid black;
-            height:700px;
-            width:3850px;
-            display: flex;
-        }
-        #grid5>div{
-            width:255;
-            padding: 50px;
-            padding-left: 0px;
-            height:500px;
-            text-align: end;
-            padding-top: 210px;
-        }
-        #grid5>div>h4{
-            font-size: large;
-            align-items: center;
-            color: #000;
-            display: flex;
-            font-size: 32px;
-            letter-spacing: .01em;
-            line-height: 58px;
-            margin-left: 0;
-            text-align: center;
-            text-transform: uppercase;
-            transform: translateY(285px) rotate(-90deg);
-            transform-origin: 0 0;
-            white-space: nowrap;
-            width: 60px;
-            padding-right: 280px;
-        }
-        #footer{
-            display: flex;
-            border:1px solid black;
-        }
-        #footer>div{
-            width:50%;
-        }
-        #footer>div:nth-child(2){
-            display: flex;
-            width:50%;
-        }
-        #footer>div:nth-child(2)>div{
-            margin: auto;
-        }
-        #footer>div:nth-child(2)>div:nth-child(1){
-            margin-top: 0%;     
-        }
-      
-        #footer>div>iframe{
-            width:550px;
-            height: 300px;
-        }
-        #footer>div>button{
-            background-color: #000;
-            color: #f5f4f2;
-            border-radius: 20px;
-            padding: 15px;
-        }
-        #footer>div>button:hover{
-            background-color: red;
-        }
-    
+select {
+  border: 0px !important;
+  outline: 0px !important;
+}
 
-        #form{
-            display: flex;
-            border:1px solid black;
-            width:50%;
-            height:600px;
-            margin: auto;
-        }
-        #form>div:nth-child(2){
-            border:1px solid red;
-            width:60%;
-            background-color: rgb(189,164,247);
-            padding-top:200px;
-            font-size: large;
-        }
-        #form>div:nth-child(2)>div{
-            border:1px solid red;
-            margin: 20px;
-            background-color: white;
-        }
-       #login{
-        border:1px solid red;
-        display: flex;
-        font-size: 20px;
-        
-       }
-       #login>div{
-        border:1px solid black;
-        width:50%;
-        padding: 10px;
-       }
-       #login>div:nth-child(2){
-        background-color: #000;
-        color:white;
-       }
-      #form>div>h3{
-        font-size: 25px;
-        text-align: center;
-      }
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#banner {
+  border: 1px solid black;
+  border-width: 1px 0px 1px 0px;
+}
+#grid1 {
+  display: grid;
+  grid-template-columns: repeat(4, 400px);
+  grid-template-rows: repeat(3, 300px);
+  margin-top: 80px;
+  background-color: #fff;
+}
+#grid1 > div {
+  border: 1px solid black;
+  width: 100%;
+  display: flex;
+}
+#grid1 > div > div {
+  width: 100px;
+  height: 295px;
+}
+.vertical {
+  color: #000;
+  font-size: 24px;
+  margin-left: 0;
+  text-transform: uppercase;
+  transform: translateY(285px) rotate(-90deg);
+  transform-origin: 0 0;
+  width: 290px;
+  height: 100px;
+  padding-left: 24px;
+  font-style: arial;
+}
+
+#grid1 > div > img {
+  width: 300px;
+  height: 298px;
+  justify-content: flex-end;
+}
+
+#grid2 {
+  display: grid;
+  grid-template-columns: repeat(3, 450px);
+  grid-template-rows: repeat(8, 365px);
+  margin-top: 80px;
+}
+#grid2 > div {
+  border: 1px solid black;
+  display: flex;
+  text-transform: uppercase;
+  background-color: white;
+  text-align: center;
+  font-size: larger;
+}
+#grid2 > div > img {
+  width: 345px;
+  height: 298px;
+  padding-top: 65px;
+  padding-left: 20px;
+}
+.big {
+  font-size: 70px;
+  color: #000;
+}
+#help {
+  font-size: 12px;
+  padding: 0px;
+  width: 70px;
+  height: 30px;
+}
+#join {
+  background-color: black;
+  color: white;
+  padding: 5px;
+}
+#grid3 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: 860px;
+  border: 1px solid black;
+  margin-top: 80px;
+}
+#grid3 > div {
+  height: 98%;
+  margin: auto;
+  text-align: center;
+  font-size: larger;
+  padding: 10px;
+  background-color: antiquewhite;
+}
+#grid3 > div > h2 {
+  font-size: 130px;
+  text-align: center;
+}
+#grid3 > :nth-child(4) > h2 {
+  font-size: 80px;
+}
+#grid3 > :nth-child(4):hover {
+  border: 1px solid black;
+  background-color: #c9bffb;
+}
+#grid3 > :nth-child(4) > a > button {
+  padding: 20px;
+  color: wheat;
+  background-color: black;
+  cursor: pointer;
+}
+#grid3 > :nth-child(4) {
+  background-color: #cafc4f;
+}
+#grid3 > div > h4 {
+  font-size: larger;
+}
+#grid4 {
+  background-color: azure;
+  margin-top: 80px;
+  height: 350px;
+  display: grid;
+  width: 100%;
+  border: 1px solid black;
+}
+#grid4 > div {
+  display: flex;
+  height: 150px;
+  font-size: 25px;
+  width: 80%;
+  margin-left: 100px;
+  justify-content: space-around;
+  margin-top: -120px;
+}
+#grid4 > h4 {
+  font-size: large;
+  align-items: center;
+  color: #000;
+  display: flex;
+  font-size: 32px;
+  letter-spacing: 0.01em;
+  line-height: 58px;
+  margin-left: 0;
+  text-align: center;
+  text-transform: uppercase;
+  transform: translateY(285px) rotate(-90deg);
+  transform-origin: 0 0;
+  white-space: nowrap;
+  width: 60px;
+}
+#grid4 > div > div {
+  width: 250px;
+  height: 100px;
+  margin: 20px;
+  margin-top: 30px;
+}
+#grid5 {
+  background-color: honeydew;
+  border: 1px solid black;
+  height: 700px;
+  width: 3850px;
+  display: flex;
+}
+#grid5 > div {
+  width: 255;
+  padding: 50px;
+  padding-left: 0px;
+  height: 500px;
+  text-align: end;
+  padding-top: 210px;
+}
+#grid5 > div > h4 {
+  font-size: large;
+  align-items: center;
+  color: #000;
+  display: flex;
+  font-size: 32px;
+  letter-spacing: 0.01em;
+  line-height: 58px;
+  margin-left: 0;
+  text-align: center;
+  text-transform: uppercase;
+  transform: translateY(285px) rotate(-90deg);
+  transform-origin: 0 0;
+  white-space: nowrap;
+  width: 60px;
+  padding-right: 280px;
+}
+#footer {
+  background-color: #fff;
+  display: flex;
+  border: 1px solid black;
+}
+#footer > div {
+  width: 50%;
+}
+#footer > div:nth-child(2) {
+  display: flex;
+  width: 50%;
+}
+#footer > div:nth-child(2) > div {
+  margin: auto;
+}
+#footer > div:nth-child(2) > div:nth-child(1) {
+  margin-top: 0%;
+}
+
+#footer > div > iframe {
+  width: 550px;
+  height: 300px;
+}
+#footer > div > button {
+  background-color: #000;
+  color: #f5f4f2;
+  border-radius: 20px;
+  padding: 15px;
+}
+#footer > div > button:hover {
+  background-color: red;
+}
+
+#form {
+  display: flex;
+  border: 1px solid black;
+  width: 60%;
+  height: 600px;
+  margin: auto;
+  text-align: center;
+  font-size: 20px;
+}
+#form > div:nth-child(1) {
+  width: 150%;
+}
+#form > div:nth-child(2) {
+  border: 1px solid red;
+  width: 150%;
+  background-color: rgb(189, 164, 247);
+  padding-top: 200px;
+  font-size: large;
+}
+#form > div:nth-child(2) > div {
+  border: 1px solid red;
+  margin: 20px;
+  background-color: white;
+}
+#login {
+  border: 1px solid red;
+  display: flex;
+  font-size: 20px;
+}
+#login > div {
+  border: 1px solid black;
+  width: 50%;
+  padding: 10px;
+}
+#login > div:nth-child(2) {
+  background-color: #000;
+  color: white;
+}
+
+div + h3 {
+  font-size: 25px;
+  text-align: center;
+}
+#email {
+  padding: 15px;
+  width: 80%;
+  margin-top: -20px;
+}
+#google {
+  width: 90%;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: large;
+}
+#apple {
+  width: 90%;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: large;
+}
+#email2 {
+  width: 90%;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: large;
+  background-color: black;
+  color: white;
+}
+#fb {
+  width: 90%;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: large;
+  background: rgb(61, 92, 152);
+  color: white;
+}
+
+#login ~ h4 {
+  text-align: start;
+  margin: 23px;
+}
+#join2 {
+  display: flex;
+  border: 1px solid black;
+  width: 60%;
+  height: 950px;
+  margin: auto;
+}
+
+#join2 > div:nth-child(2) {
+  border: 1px solid red;
+  width: 180%;
+  background-color: rgb(189, 164, 247);
+  padding-top: 200px;
+  font-size: large;
+}
+#join2 > div:nth-child(2) > div {
+  border: 1px solid red;
+  margin: 20px;
+  background-color: white;
+}
+#pass {
+  padding: 15px;
+  width: 80%;
+  margin-top: -20px;
+}
+#join2 {
+  text-align: center;
+  font-size: 20px;
+}
+#join2 > div:nth-child(1) {
+  width: 180%;
+}
+#men {
+  display: flex;
+  width: 100%;
+  border: 1px solid black;
+  justify-content: space-around;
+}
+#men2 {
+  margin-left: 25px;
+}
+
+#container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+body {
+  background-size: cover;
+  width: 100%;
+  overflow-x: hidden !important;
+  /* background-color: rgb(236, 228, 213); */
+}
+
+#help2 {
+  width: 100%;
+  opacity: 90%;
+  text-align: center;
+  height: 1000px;
+  font-size: 80px;
+}
+#help2 > h1 {
+  font-size: 150px;
+  font-weight: 400;
+  color: #000;
+}
+#help2 > input {
+  padding: 40px;
+  width: 50%;
+  border-radius: 30px;
+  font-size: 40px;
+}
+#help2 > p:hover {
+  background-color: blue;
+  color: white;
+}
+
+#about {
+  width: 95%;
+  background-color: aliceblue;
+  text-align: justify;
+  font-size: 30px;
+  margin: auto;
+  padding: 30px;
+  line-height: 1;
+}
+#about > img {
+  width: 100%;
+  border: 2px solid red;
+}
+#about > h3 {
+  text-align: center;
+  text-decoration: underline;
+  font-size: 80px;
+}
